--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
 SESSION_ID = 'VAJIRA-MD=WFNkCYAT#bUrYy8RkcpQNpEZOHnYPDkX7yZzjtiohD6Q23RUFypc'
 OWNER_NUMBER = '94759404990'
+POSTGRESQL_URL = 'postgres://vajiratech_user:oSIFl2xmSojMZ0rkzdd0g0W6msuVTpNN@dpg-cpd7fjv109ks73e5gtig-a.frankfurt-postgres.render.com/vajiratech'
